syntax = "proto3";

package image;

option java_multiple_files = true;
option java_package = "com.lamnguyen.product_service.protos";
option java_outer_classname = "MediaCheckedProto";

service MediaCheckedService {
  // Check if an image code exists
  rpc CheckMediaExists (ImageCodeRequest) returns (ImageExistsResponse);
  rpc CheckListMediaExists (ImageCodesRequest) returns (ImageCodesExistsResponse);
}

message ImageCodeRequest {
  string image_id = 1; // mã hình ảnh
}

message ImageCodesRequest {
  repeated string ids = 1; // mã hình ảnh
}

message ImageCodesExistsResponse {
  map<string, bool> idExistMap = 1;
}

message ImageExistsResponse {
  bool exists = 1;       // true nếu tồn tại, false nếu không
}
